zno-macro-draft/tests/zno/ui/err/011-optional-is-symbol.stderr
error: expected `=`
 --> tests/zno/ui/err/011-optional-is-symbol.rs:3:1
  |
3 | #[zno(name = "a", type)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `zno` (in Nightly builds, run with -Z macro-backtrace for more info)
