zno-macro-draft/tests/zno/ui/err/011-optional-is-symbol.rs
use zno::zno;

#[zno(name = "a", type)]
fn f() {}

fn main() {
    f();
}
